[gd_scene load_steps=2 format=3 uid="uid://by4r66bd3bru"]

[ext_resource type="Script" path="res://scripts/MainMenuGodot4.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.3
text = "LA VELADA VISUAL NOVEL"

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "NUEVA PARTIDA"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "CONTINUAR"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "CONFIGURACIÃ“N"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "SALIR"
